# logjam

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  temp.rs
callback_fields/: Cargo.toml  Makefile.toml
callback_fields/assets/: callback_fields.xml  manifest.json
callback_fields/src/: callback_field.rs  copy_to_clipboard.rs  lib.rs  manifest.rs
logjam/: Cargo.toml  Makefile.toml
logjam/assets/: README.md  preferences.toml
logjam/src/: app.rs  main.rs  plugin_instance.rs  tab_viewer.rs
logjam_core/: Cargo.toml
logjam_core/src/: lib.rs  plugin.rs  response.rs  ui.rs
logjam_derive/: Cargo.toml  Makefile.toml
logjam_derive/src/: lib.rs
plugins/TestPluginParser/: index.html  patterns.xml  script.js
portable/plugins/minecraftJavaEdition/: callbackFields.xml  manifest.toml
portable/plugins/templatePlugin/: callbackFields.xml  manifest.toml
src/: callback_fields.rs  main.rs  manifest.rs  plugin.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: log_parser.rs  main.rs
src-ui/: index.html  script.js  style.css
template_plugin/: Cargo.toml
template_plugin/src/: lib.rs
