[package]
name = "callback_fields"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe.workspace = true
abi_stable.workspace = true
regex.workspace = true
roxmltree.workspace = true
serde_json.workspace = true
winapi = { version = "0.3.9", features = ["winbase"] }
logjam_core = { path = "../logjam_core" } 