[package]
name = "logjam"
version = "0.1.0"
description = "A program for collecting and using data from Game Logs"
authors = ["Zackary Semancik"]
license = ""
repository = "https://github.com/zanciks/logjam"
default-run = "logjam"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }
regex = "1"
xml-rs = "0.8.21"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
